# build123d_draft

./: .gitignore  Makefile  README.header.md  README.md  animate.py  build.py  build123d_draft.py  build_template.py  pyproject.toml  tutorial.md
build123d_draft/: __init__.py  build_line.py  render.py  testing.py  tools.py  utils.py
templates/: tutorial.md
tests/: conftest.py  test_build_line.py
tests/models/: test_build123d_tutorials.py  test_ttt_monthly_challenge.py  test_ttt_practice.py  test_ttt_random.py
